# wwna-variables-2024

./: .Rhistory  .gitignore  LICENSE  README.md  RUN_ALL.R  RUN_ALL.py  helper_functions.R  helper_functions.py  plotting_functions.py  pyproject.toml  step1_parameter_categorization.R  step1_parameter_categorization.py  step2_population_served.R  step2_population_served.py  step3_near_exceedance.py  step3_near_exceedence.R  step4_future_limits.R  step4_future_limits.py  step5_update_facilities_list.R
data/manual_updates/: FACILITY_PERMIT_manual.csv  cwns_facilities_match_manual.csv  dmr_esmr_mapping_manual.csv  parameter_sorting_dict.json
